--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>The White House Paper For BrandonBucks</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <h1>The White House Paper for BrandonBucks</h1>
+    <h2>An experimental cryptocurrency for the people by the people</h2>
 
+    <p>tldr; BrandonBucks is a cryptocurrency born from the Let's Go Brandon meme. The token will serve as a hedge against Joe Biden's inflation.</p>
+
+    <h2>Inspiration</h2>
+    <p>BrandonBucks was inspired by the meme <a href="https://en.wikipedia.org/wiki/Let%27s_Go_Brandon">"Let's Go Brandon!"</a></p>
+
+    <h2>Why BrandonBucks?</h2>
+    <p>The current primary purpose of BrandonBucks is to serve as a hedge against the inflation Joe Biden has caused and continues to cause here in America.</p>
+    <p>The community of 'Brandons' will define the future of the token.</p>
+    <p> BrandonBucks is different because it seeks to live past the meme.</p>
+    <p>What is a Brandon?</p>
+    <ul>
+      <li>Someone who owns BrandonBucks</li>
+      <li>Someone who chants "Let's Go Brandon"</li>
+      <li>Someone who loves America</li>
+      <li>Someone who is tired of incompetent leaders hurting our country</li>
+    </ul>
+    <p>By having a purpose behind the coin, we hope that BRBX will become something more than a meme, something worthwhile, a movement if you will.</p>
+
+    <h2>Who should support BrandonBucks?</h2>
+    <p>If you find <a href="https://youtu.be/6p43Gf49a1E">this</a> video to be true. You are already part of the community of BrandonBucks.</p>
+    <p>If you want to hedge against inflation, get BRBX.</p>
+    <p>If you are concerned/angry with the border crisis, which is 100% Joe Biden's fault, get BRBX.</p>
+    <p>If you are disgusted by Joe's failure in Afghanistan, get BRBX.</p>
+    <p>If you are tired of lax policies on crime, get BRBX.</p>
+    <p>If any of the hundreds of Joe failures have left you disappointed in a pitiful president, get BRBX</p>
+    <p>Also if you love watching gaffs and fails of Sleepy Joe, get BRBX</p>
+
+    <h2>How can I help?</h2>
+    <p>First and foremost, vote for local officials who disapprove of Joe Biden's pathetic presidency. While our political idealogies may differ we all can agree that Joe Biden is a horrible president and has done nothing good for the American people.</p>
+    <p>Aquire BrandonBucks</p>
+    <p>Spread the word! Tell your family, friends, co-workers, etc.</p>
+
+    <h2>How can I acquire BrandonBucks</h2>
+    <p>At the time of writing, BrandonBucks are available solely on SushiSwap.</p>
+
+    <p>The contract address is 0xea8301F1df4b8e34650724EDc0dB9f39e91949A5</p>
+    <p>We ask that Centralized Exchanges will begin accepting/trading BrandonBucks so more investors may have access. BrandonBucks needs help here too! Ask your favorite exchanges to begin accepting BrandonBucks</p>
+    <p>We will update this site as more options to acquire BrandonBucks become available</p>
+
+    <h3>To those who have read this far</h3>
+    <p>The BrandonBucks team thanks you for your time in reading this. We hope you will take the time to think about what you value in your elected leaders and whether or not our current leaders line up with those values</p>
+    <p>We hope you will join us in promoting freedom, good government, strong leadership, and most of all America</p>
+
+    <p>Tweet us <a href="https://twitter.com/_brandonbucks">@_brandonbucks</a></p>
+
+  </body>
+</html>
